src/objects/Bond__c.object
<CustomObject>
    <description>LPAM Bonds, LITC</description>
    <fields>
        <fullName>Assistance_Amount_At_Conversion__c</fullName>
        <description>Bond Assistance Amount at Conversion</description>
        <inlineHelpText>Enter the Amount of the Bond Assistance at Conversion</inlineHelpText>
        <label>Assistance Amount (At Conversion)</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond_Councel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bond Councel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonds</relationshipLabel>
        <relationshipName>Bonds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bond_Fee_Payment_Due__c</fullName>
        <label>Bond Fee Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Fee_Second_Payment_Due__c</fullName>
        <label>Bond Fee Second Payment Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Series_Second__c</fullName>
        <label>Bond Series (Second)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Series__c</fullName>
        <label>Bond Series</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Trustee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bond Trustee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bonds</relationshipLabel>
        <relationshipName>Bonds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bond_Trustee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bond Trustee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonds (Bond Trustee)</relationshipLabel>
        <relationshipName>Bonds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Advisor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonds (Financial Advisor)</relationshipLabel>
        <relationshipName>Bonds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Compound</fullName>
                </value>
                <value>
                    <fullName>Amortized</fullName>
                </value>
                <value>
                    <fullName>Adjustable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issuance_Type__c</fullName>
        <label>Issuance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LPAM_Bond__c</fullName>
        <description>This is a bond directly related to the project</description>
        <label>Loan Portfolio Asset Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipName>Bonds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lender</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonds (Lender_1)</relationshipLabel>
        <relationshipName>Bonds3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Bond_Amount_At_Closing__c</fullName>
        <label>Original Bond Amount (At Closing)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reserve_Amount__c</fullName>
        <label>Reserve Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bond</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Bond-{00000}</displayFormat>
        <label>BondID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>